# bot-loop

./: .gitignore  AGENTS.md  README.md  copilot-loop-tui.sh  copilot-loop.sh
Formula/: bot-loop.rb
issues/: TEMPLATE.md  add-ci-test-workflow.md  add-readme.md  bound-prompt-size.md  cleanup-merged-worktrees.md  copilot-run-timeout.md  issue-priority-ordering.md  notify-on-events.md  per-issue-model-directive.md  summarize-long-threads.md  tiered-model-triage.md  tui-activity-indicator.md  tui-bot-detail-pane.md  tui-command-palette.md  tui-config-file.md  tui-configurable-keybinds.md  tui-filter-search-bots.md  tui-help-overlay.md  tui-jira-integration.md  tui-live-log-pane.md  tui-lua-scripting.md  tui-mouse-support.md  tui-restart-failed-bot.md  tui-sort-bots.md  tui-status-dashboard.md  tui-theming.md
tests/: agents-md.test.sh  cleanup-branches.test.sh  close-summary.test.sh  conflict-pr.test.sh  cost-saver.test.sh  failing-checks-pr.test.sh  gh-auth.test.sh  gh-host.test.sh  guard-work-unit.test.sh  issue-labels.test.sh  loop-auto-fix.test.sh  mergeability.test.sh  pending-label.test.sh  plan-mode.test.sh  quality-assurance.test.sh  readme.test.sh  rebase-conflict.test.sh  rebrand.test.sh  resume-interrupted.test.sh  resume-workspace.test.sh  run-all.sh  run-log-mirror.test.sh  shutdown-reason.test.sh  stop-retry.test.sh  sync-default-branch.test.sh  terminal-title.test.sh  timeout.test.sh  triage-off-no-crash.test.sh  (+7 more)
tui/: Cargo.toml
tui/src/: app.rs  cost.rs  github.rs  logs.rs  main.rs  models.rs  reporter.rs  runner.rs  settings.rs  ui.rs  worker.rs
(+2 files in other folders)
