[package]
name = "copilot-loop-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI (ratatui) that lists GitHub issues for copilot-loop"

[dependencies]
anyhow = "1.0.103"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
