[package]
name = "copilot-loop-tui"
version = "0.1.23"
edition = "2024"
description = "Terminal UI (ratatui) that lists GitHub issues for copilot-loop"

[dependencies]
anyhow = "1.0.103"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Profile the release workflow builds with for the Homebrew universal binary.
[profile.dist]
inherits = "release"
lto = "thin"
